# aboba

./: .gitignore  Cargo.toml  README.md  build.rs  data.txt
.cargo/: config
docker/: Dockerfile  build_mobian.sh
docker/common/apt/: 00-mobian-priority  mobian.gpg  mobian.list
docker/common/sudo/: mobian
src/: main.rs
src/audio/: audio_player.rs  gstreamer.rs  mod.rs  mod_ff.rs
src/audio/c/: player.c
src/c/: a.out  player.c
src/file_manager/: mod.rs
src/filemanager/: mod.rs
src/ui/: books_view.rs  chapters.rs  chapters_view.rs  mod.rs  player.rs  player_view.rs  style.css  ui.glade
src/util/: mod.rs
