[package]
name = "aboba"
version = "0.0.3"
authors = ["Vladimir <vladdocan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {git = "https://github.com/gtk-rs/gtk-rs"}
anyhow = "1.0"
ffmpeg-next = "4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
directories = "3.0"

[build-dependencies]
cc = "1.0"
