[package]
name = "aboba"
version = "0.0.3"
authors = ["Vladimir <vladdocan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
directories = "3.0"
mp4ameta = {git = "https://github.com/Saecki/rust-mp4ameta", rev="efd06164"}

[dependencies.gtk]
package = "gtk"
version = "0.14"


[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
